<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/itemImageAttribute"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        app:srcCompat="@mipmap/ic_launcher_round"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/itemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/itemName"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@+id/itemImageAttribute"
        app:layout_constraintTop_toTopOf="@+id/itemImageAttribute" />

    <TextView
        android:id="@+id/imageDance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="8dp"
        android:text="@string/textDance"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@+id/itemImageAttribute"
        app:layout_constraintTop_toBottomOf="@+id/itemName" />

    <TextView
        android:id="@+id/itemDanceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="8dp"
        android:text="@string/valueInit"
        app:layout_constraintTop_toBottomOf="@+id/itemName"
        app:layout_constraintLeft_toRightOf="@+id/imageDance" />

    <TextView
        android:id="@+id/imageVocal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="8dp"
        android:text="@string/textVocal"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/itemName"
        app:layout_constraintLeft_toRightOf="@+id/itemDanceValue" />

    <TextView
        android:id="@+id/itemVocalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="8dp"
        android:text="@string/valueInit"
        app:layout_constraintTop_toBottomOf="@+id/itemName"
        app:layout_constraintLeft_toRightOf="@+id/imageVocal" />

    <TextView
        android:id="@+id/imageAct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="8dp"
        android:text="@string/textAct"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/itemName"
        app:layout_constraintLeft_toRightOf="@+id/itemVocalValue" />

    <TextView
        android:id="@+id/itemActValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="8dp"
        android:text="@string/valueInit"
        app:layout_constraintTop_toBottomOf="@+id/itemName"
        app:layout_constraintLeft_toRightOf="@+id/imageAct" />

</android.support.constraint.ConstraintLayout>